--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- b) Несколько строк о себе: где учишься или работаешь, хобби, увлечения. Используй тег для абзаца. Длина строки должна быть больше 50-ти симвов (пробелы и др знаки припинания тоже считаются символом) -->
         <p>Работаю в IT-incubator. Люблю изучать веб-технологии, улекаюсь волейболом.</p>
         <!-- c) Фото (или любую картинку из интернета). Не забудь добавить описание на случай, если изображение не загрузится -->
-        <img src="asset/img/photo-1.jpg" alt=" фото Анны" width="300" height="200">
+        <img src="//unsplash.it/600/200" alt="случайное фото">
     </section>
 
     <section data-cy="hw1-section-about-pre">
