--- a/index.html
+++ b/index.html
@@ -29,11 +29,22 @@
 
     <section data-cy="hw1-section-about-pre">
         <!-- 2) В этом разделе создай выпадающий список с разными городами (не меньше 3-х). Свой город сделай вторым в этом списке. С помощью специального атрибута, сделай так, чтобы твой город всегда был выбранным по умолчанию  -->
+        <select name="city" id="city">
+            <option value="Minsk">Minsk</option>
+            <option value="Warsaw" selected>Warsaw</option>
+            <option value="Milan">Milan</option>
+        </select>
         <div data-cy="hw1-unordered-list-box-pre">
             <!-- 3) В этом разделе создай 2 дочерних элемента: -->
 
             <!-- a) Заголовок 2-го уровня (любимые книги/фильмы/блюда/страны... и т.п.) -->
+            <h2>Любимые книги</h2>
             <!-- b) Маркированный список. В списке должно быть не менее 3-х элементов -->
+            <ul>Список книг, которые я рекомендую к прочтению:
+                <li>Идиот</li>
+                <li>Атлант расправил плечи</li>
+                <li>Над пропостью во ржи</li>
+            </ul>
         </div>
         <div data-cy="hw1-ordered-list-box-pre">
             <!-- 3) В этом разделе создай 2 дочерних элемента: -->
