--- a/index.html
+++ b/index.html
@@ -50,7 +50,13 @@
             <!-- 3) В этом разделе создай 2 дочерних элемента: -->
 
             <!-- a) Заголовок 2-го уровня с другим названием (любимые книги/фильмы/блюда/страны... и т.п.) -->
+            <h2>Любимые блюда</h2>
             <!-- b) Нумерованный (упорядоченный) список. В списке должно быть не менее 3-х элементов -->
+            <ol>Мои любимые блюда:
+                <li>Вареники с вишней</li>
+                <li>Салат Цезарь</li>
+                <li>Запеченное в маринаде мясо</li>
+            </ol>
         </div>
         <div data-cy="hw1-skills-box-pre">
             <h2>Мои скиллы</h2>
