--- a/index.html
+++ b/index.html
@@ -64,6 +64,20 @@
                 - В подписи укажи названия любых тем по верстке (все, что знаешь или слышал). 
                 - Каждый чекбокс должен быть связан со своей подписью. Для этого чекбокс должен находиться в элементе для подписи
                 - Отметь "галочкой" (с помощью специального атрибута) темы, которые ты уже знаешь. -->
+            <fieldset>
+                <label for="tags">
+                    <input id="tags" type="checkbox" checked>Семантические теги
+                </label>
+                <label for="css">
+                    <input id="css" type="checkbox" checked>CSS
+                </label>
+                <label for="adaptation">
+                    <input id="adaptation" type="checkbox" checked>Адаптация сайтов
+                </label>
+                <label for="site">
+                    <input id="site" type="checkbox">Табличный макет сайта
+                </label>
+            </fieldset>
         </div>
         <!-- 5) Создай здесь однострочное поле для ввода текста с подсказкой "Новый скилл", которая исчезает, когда начинаешь что-то печатать (для подсказки есть специальный атрибут) -->
         <!-- 6) Создай здесь кнопку “Добавить” -->
