--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             </fieldset>
         </div>
         <!-- 5) Создай здесь однострочное поле для ввода текста с подсказкой "Новый скилл", которая исчезает, когда начинаешь что-то печатать (для подсказки есть специальный атрибут) -->
+        <textarea name="text" id="text" placeholder="Новый скилл"></textarea>
         <!-- 6) Создай здесь кнопку “Добавить” -->
         <!-- 7) Добавь горизонтальную линию (для этого есть специальный тег) -->
 
