--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         <!-- 5) Создай здесь однострочное поле для ввода текста с подсказкой "Новый скилл", которая исчезает, когда начинаешь что-то печатать (для подсказки есть специальный атрибут) -->
         <textarea name="text" id="text" placeholder="Новый скилл"></textarea>
         <!-- 6) Создай здесь кнопку “Добавить” -->
+        <button type="submit">Добавить</button>
         <!-- 7) Добавь горизонтальную линию (для этого есть специальный тег) -->
 
         <table data-cy="hw-about-table-pre">
