fixed task 4 & complete task 8

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 - Каждый чекбокс должен быть связан со своей подписью. Для этого чекбокс должен находиться в элементе для подписи
                 - Отметь "галочкой" (с помощью специального атрибута) темы, которые ты уже знаешь. -->
             <fieldset>
+                <legend>Разделы для изучения в верстке</legend>
                 <label for="tags">
                     <input id="tags" type="checkbox" checked>Семантические теги
                 </label>
@@ -86,11 +87,43 @@
         <!-- 7) Добавь горизонтальную линию (для этого есть специальный тег) -->
         <hr>
 
-        <table data-cy="hw-about-table-pre">
+        <table border="1" data-cy="hw-about-table-pre">
             <!-- 8) В таблице сделай 5 строк и 3 столбца. 
                         - В первой строке ячейки заголовков, в остальных обычные ячейки
                         - Добавь границы для всей таблицы с помощью специального атрибута border="". Он устарел, но работает
                         - В последнем ряду первая ячейка должна занимать все свободное место по горизонтали (ширине). Таблицу можно заполнять любыми данными -->
+
+            <caption>Перечень продуктов</caption>
+            <thead>
+                <tr>
+                    <th>Продукт</th>
+                    <th>стоимость за 1 кг</th>
+                    <th>Количество кг</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Огурцы</td>
+                    <td>1</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>Куриное филе</td>
+                    <td>3</td>
+                    <td>3</td>
+                </tr>
+
+                <tr>
+                    <td>Апельсины</td>
+                    <td>0.5</td>
+                    <td>4</td>
+                </tr>
+
+                <tr>
+                    <td rowspan="5">Итого:</td>
+                </tr>
+
+            </tbody>
         </table>
     </section>
     <footer data-cy="hw-footer-pre">
