fixed the mistakes

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </fieldset>
         </div>
         <!-- 5) Создай здесь однострочное поле для ввода текста с подсказкой "Новый скилл", которая исчезает, когда начинаешь что-то печатать (для подсказки есть специальный атрибут) -->
-        <textarea name="text" id="text" placeholder="Новый скилл"></textarea>
+        <input name="text" id="text" placeholder="Новый скилл">
         <!-- 6) Создай здесь кнопку “Добавить” -->
         <button type="submit">Добавить</button>
         <!-- 7) Добавь горизонтальную линию (для этого есть специальный тег) -->
@@ -120,7 +120,7 @@
                 </tr>
 
                 <tr>
-                    <td rowspan="5">Итого:</td>
+                    <td rowspan="2">Итого:</td>
                 </tr>
 
             </tbody>
