finally fixed mistake in task 8

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </tr>
 
                 <tr>
-                    <td rowspan="3">Итого:</td>
+                    <td colspan="3">Итого:</td>
                 </tr>
 
             </tbody>
