--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
                 </tr>
 
                 <tr>
-                    <td colspan="3">Итого:</td>
+                    <td colspan="2">Итого:</td>
+                    <td>TBD</td>
                 </tr>
 
             </tbody>
